cloud-native-poc-pdf-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pdf
  labels:
    app: pdf
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /actuator/prometheus
spec:
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: pdf
