cloud-native-poc-pdf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdf-ingress
spec:
  rules:
  - host: pdf-ingress
    http:
      paths:
      - backend:
          serviceName: pdf
          servicePort: 8083
